--- a/README
+++ b/README
@@ -11,7 +11,7 @@ An itsy bitsy floating window manager (*220~ sloc / 24kb compiled!*).
 - Alt-Tab window focusing.
 - All windows die on exit.
 - No window borders.
-- No ICCCM ttps://web.archive.org/web/20190617214524/https://raw.githubusercontent.com/kfish/xsel/1a1c5edf0dc129055f7764c666da2dd468df6016/rant.txt
+- No ICCCM https://web.archive.org/web/20190617214524
 - No EWMH.
 - etc etc etc
 
@@ -31,8 +31,7 @@ Installation
 4) (Optional) Apply patch with `git apply patches/patch-name`
     - In case of applying multiple patches, it has to be done **manually**.
 
-If you are using GDM, save the following to `/usr/share/xsessions/sowm.desktop`. It is still recommended to start `sowm` from `.xinitrc` or through
-[your own xinit implementation](https://github.com/dylanaraps/bin/blob/dfd9a9ff4555efb1cc966f8473339f37d13698ba/x).
+If you are using GDM, save the following to `/usr/share/xsessions/sowm.desktop`. It is still recommended to start `sowm` from `.xinitrc` or through your own xinit implementation
 
 Thanks
 ------
